# P2P-File-Transfer

./: Cargo.toml  README.md  app.js  index.html  manifest.json  robots.txt  sitemap.xml  yandex_8d73094087b9e80e.html
css/: style.css
js/: app.js
pkg/: .gitignore  README.md  package.json  webrtc_crypto.d.ts  webrtc_crypto.js  webrtc_crypto_bg.wasm  webrtc_crypto_bg.wasm.d.ts
src/: lib.rs
